# Butterscotch-MiyooCFW

./: .gitignore  CMakeLists.txt  Dockerfile.miyoo-musl  Dockerfile.miyoo-uclibc  README.md  SDL_BACKEND_README.md  build_miyoo.sh  control  make_miyoo_musl.sh  make_miyoo_uclibc.sh
.github/workflows/: build.yml
build_miyoo/ipk_root/CONTROL/: control
build_miyoo/ipk_root/data/mnt/games/butterscotch/: butterscotch
build_miyoo/ipk_root/data/mnt/gmenu2x/sections/games/: butterscotch.lnk
cmake/: miyoo.cmake
src/: json_reader.c  renderer.h  runner.c  rvalue.h  text_utils.h  utils.h  vm.c  vm.h  vm_builtins.c
src/glfw/: gl_legacy_renderer.c  gl_legacy_renderer.h  ma_audio_system.c  main.c
src/ps2/: gs_renderer.c  main.c  ps2_utils.c  ps2_utils.h
src/sdl/: debug_menu.c  debug_menu.h  ma_tremor_audio.cpp  ma_tremor_audio.h  main.c  sdl_file_system.c  sdl_file_system.h  sdl_mixer_audio.cpp  sdl_mixer_audio.h  sdl_renderer.c  sdl_renderer.h  sdl_renderer_opt.c  tremor_backend.c  tremor_backend.h
